<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="br.com.luanoliveira.pomodoroclock.PomodoroClockViewModel" />

        <import type="android.view.View"/>
        <import type="br.com.luanoliveira.pomodoroclock.ClockState"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/timer"
            android:layout_width="301dp"
            android:layout_height="119dp"
            android:fontFamily="monospace"
            android:text="@{viewmodel.currentTime}"
            android:textAlignment="center"
            android:textSize="80sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35000002" />

        <ImageButton
            android:id="@+id/play_button"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/content_description_play_button"
            android:onClick="@{() -> viewmodel.onPlay()}"
            android:tint="#FFFFFF"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer"
            app:layout_constraintVertical_bias="0.35000002"
            app:srcCompat="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/stop_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/content_description_stop_button"
            android:onClick="@{() -> viewmodel.onStop()}"
            android:tint="#FFFFFF"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/play_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer"
            app:layout_constraintVertical_bias="0.35000002"
            app:srcCompat="@android:drawable/checkbox_off_background" />

        <ImageButton
            android:id="@+id/restart_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/content_description_restart_button"
            android:onClick="@{() -> viewmodel.onRestart()}"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/play_button"
            app:layout_constraintTop_toBottomOf="@+id/timer"
            app:layout_constraintVertical_bias="0.35000002"
            app:srcCompat="@android:drawable/stat_notify_sync_noanim" />

        <TextView
            android:id="@+id/label_minutes2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_minutes"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/stop_button"
            app:layout_constraintEnd_toStartOf="@+id/label_seconds"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/label_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_seconds"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/restart_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.742"
            app:layout_constraintStart_toEndOf="@+id/label_minutes2"
            app:layout_constraintTop_toBottomOf="@+id/timer"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
